--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 });
             })
             .catch(error => {
-                console.error('There has been a problem with your fetch operation:', error);
+                console.error('There has been a problem with some of your fetch operation:', error);
             });
 
     </script>
