--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rozdelenie kresiel NRSR</title>
     <style>
         body {
-            background-color: #3b3d47;
+            background-color: #222222;
             /* Change this to your desired color */
         }
     </style>
@@ -72,7 +72,7 @@
                 Highcharts.chart('container', {
                     chart: {
                         type: 'item',
-                        backgroundColor: '#3b3d47'
+                        backgroundColor: '#222222'
                     },
                     title: {
                         text: 'Rozdelenie kresiel v NRSR',
